I relinked my images so that netlify can find them

--- a/code/style.css
+++ b/code/style.css
@@ -152,7 +152,7 @@ li a:hover {
   width: 30%;
   padding-top: 250px;
   padding-bottom: 250px;
-  background-image: url(/project-news-site/code/assets/london.jpg);
+  background-image: url(./assets/london.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -177,7 +177,7 @@ li a:hover {
   width: 30%;
   padding-top: 250px;
   padding-bottom: 250px;
-  background-image: url(/project-news-site/code/assets/artist.jpg);
+  background-image: url(./assets/artist.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -202,7 +202,7 @@ li a:hover {
   width: 30%;
   padding-top: 250px;
   padding-bottom: 250px;
-  background-image: url(/project-news-site/code/assets/basketball.jpeg);
+  background-image: url(./assets/basketball.jpeg);
   background-size: cover;
   background-position: center;
 }
@@ -227,7 +227,7 @@ li a:hover {
   width: 30%;
   padding-top: 250px;
   padding-bottom: 250px;
-  background-image: url(/project-news-site/code/assets/understated.jpg);
+  background-image: url(./assets/understated.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -252,7 +252,7 @@ li a:hover {
   width: 30%;
   padding-top: 250px;
   padding-bottom: 250px;
-  background-image: url(/project-news-site/code/assets/portrait.jpg);
+  background-image: url(./assets/portrait.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -277,7 +277,7 @@ li a:hover {
   width: 30%;
   padding-top: 250px;
   padding-bottom: 250px;
-  background-image: url(/project-news-site/code/assets/sculpture.jpg);
+  background-image: url(./assets/sculpture.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -301,7 +301,7 @@ li a:hover {
   position: relative;
   width: 30%;
   padding-top: 250px;
-  background-image: url(/project-news-site/code/assets/political.jpg);
+  background-image: url(./assets/political.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -325,7 +325,7 @@ li a:hover {
   position: relative;
   width: 30%;
   padding-top: 250px;
-  background-image: url(/project-news-site/code/assets/yarn-bombers.jpg);
+  background-image: url(./assets/yarn-bombers.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -349,7 +349,7 @@ li a:hover {
   position: relative;
   width: 30%;
   padding-top: 250px;
-  background-image: url(/project-news-site/code/assets/smiling.jpg);
+  background-image: url(./assets/smiling.jpg);
   background-size: cover;
   background-position: center;
 }
